@@ -1,3 +1,6 @@
+X   X   
+    * Add Boots + Feather Falling X = zero fall damage
+
 2012-03-13  0.8.2
     * Add Sword + Punch = knock out of hand (right-click player)
     * Add Sword + Fortune = pickpocket (right-click player)
